# Token-Park-Agent

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/tpagent/: __init__.py  cli.py  main.py  settings.py
backend/src/tpagent/agents/: __init__.py  ops_writer.py  topic_researcher.py
backend/src/tpagent/config_loader/: __init__.py
backend/src/tpagent/grep/: __init__.py
backend/src/tpagent/models/: __init__.py
backend/src/tpagent/routes/: __init__.py  images.py  ops.py  sessions.py  topics.py  write.py
backend/src/tpagent/services/: image_generator.py  ops_parser.py  r2_uploader.py  text_overlay.py
backend/src/tpagent/storage/: __init__.py  session.py
backend/tests/: test_config_loader.py  test_grep.py  test_ops_parser.py
config/: brand.yaml.example  grep-rules.yaml  writing-style.yaml
config/prompts/: article-writer.md  ops-writer.md  topic-research.md
docs/: DEPLOY.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/sessions/: page.tsx
frontend/components/: GrepReportView.tsx  MarkdownView.tsx  StageProgress.tsx
frontend/lib/: api.ts  utils.ts
